重构到基本可用状态